Added a link to currency_spy gem.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Rambling about software
 
   <h1>Projects</h1>
   <ul class="posts">
+    <li><a href="https://rubygems.org/gems/currency_spy">currency-spy</a> A set of wrappers to monitor currency rates, specific to polish data sources</li>
     <li><a href="http://www.bananascrum.com">Banana Scrum</a> A scrum tool simple as scrum itself. I'm working on Banana Scrum at <a href="http://www.codesprinters.com">Code Sprinters</a></li>
-    <li><a href="http://github.com/lbadura/currency-watcher">currency-watcher</a> A set of wrappers to monitor currency rates, specific to polish data sources</li>
   </ul>
 </div>
