Add the missing friends section.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@ title: Rambling about software
   <h1>PROJECTS</h1>
   <ul class="posts">
     <li><a href="https://rubygems.org/gems/currency_spy">currency-spy</a> A set of wrappers to monitor currency rates, specific to polish data sources</li>
-    <li><a href="http://www.spread.com.pl">spread.com.pl</a>A site to monitor spread values in differen Polish banks. In design. </li>
+    <li><a href="http://www.spread.com.pl">spread.com.pl</a> A site to monitor spread values in differen Polish banks. In design. </li>
     <li><a href="http://www.bananascrum.com">Banana Scrum</a> A scrum tool simple as scrum itself which I was working on at <a href="http://www.codesprinters.com">Code Sprinters</a></li>
   </ul>
 
   <h1>CONTACT</h1>
   <ul class="posts">
     <li><strong>E-mail / Jabber / Google Talk</strong>: lukasz at niebo dot net dot pl</li>
+  </ul>
+
+  <h1>FRIENDS</h1>
+  <ul class="posts">
+    <li><a href="http://www.hauru.eu">Tomek Paczkowski</a></li>
+    <li><a href="http://www.squarewheel.pl">Paweł Stradomski</a></li>
   </ul>
 </div>
