Fix my own email address.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Rambling about software
 
   <h1>CONTACT</h1>
   <ul class="posts">
-    <li><strong>E-mail / Jabber / Google Talk</strong>: lukasz at niebo dot net dot pl</li>
+    <li><strong>E-mail / Jabber / Google Talk</strong>: lukasz at niebo dot net</li>
   </ul>
 
   <h1>FRIENDS</h1>
